--- a/final project/Class_Presention_MYea.ipynb
+++ b/final project/Class_Presention_MYea.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "##2. Problem Statement\n",
     "\n",
-    "**Can I predict a “lift” in user engagement from message attributes?**    \n",
+    "**Can I predict a “lift” in user engagement from message attributes (e.g., message text, attachment, link, @mention)?**    \n",
     "\n",
     "My initial hypotheses are:\n",
     "1. Message content and metadata have intrinsic value in predicting user engagement\n",
@@ -48,8 +48,35 @@
     "\n",
     "###3.2 Response Variable\n",
     "* Number of replies to top-level messages\n",
-    "* Encoded no reply (80% of data): 0 and 1 or more replies (20% of data)\n",
-    "* Randomly removed rows from the set of no-reply data"
+    "* Encoded:\n",
+    "  * no reply (80% of data): 0 \n",
+    "  * 1 or more replies (20% of data): 1\n",
+    "* Randomly removed rows from the set of no-reply data by running the following code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-d3ad1afb26d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_replies\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5774\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0my_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrows\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0min_place\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "rows = np.random.choice(y_data[y_data.num_replies == 0].index.values, 5774, replace=False)\n",
+    "y_data.drop(y_data.index[rows], in_place=True)"
    ]
   },
   {
@@ -86,9 +113,9 @@
    "source": [
     "## 5. Model Evaluation\n",
     "\n",
-    "The **null accuracy is .511**  \n",
+    "The **null accuracy is .511**.  \n",
     "\n",
-    "Two point performance metrics, class prediction accuracy and area-under-the-curve, are the primary evaluation metric: "
+    "Two single number performance metrics, class prediction accuracy and area-under-the-curve, are primary evaluation metrics: "
    ]
   },
   {
@@ -105,15 +132,15 @@
    "source": [
     "## 6. Conclusions \n",
     "\n",
-    "* Do not reject the hypotheses \n",
+    "* Do not reject the hypotheses (message and user attributes) \n",
     "* The model with the **hand-engineered features** is chosen for further exploration due to its relatively high interpretability\n",
     "  * Once selecting a model for further analysis, the model was evaluated by feeding all 256 combinations of features\n",
     "  * The model with the following features--'has_attach', 'has_qm', 'has_key_word', 'author_age', and 'has_at_mention'--achieved .628 class prediction accuracy and .654 AUC, rather **insignificant** improvement over the model using all features (.611 and .647, respectively)\n",
-    "* Training models on **class-balanced data** did **more** to improve performance than did any other methods (e.g., more features, tuning)\n",
+    "* Training models on **class-balanced data** did **more** to improve performance than did any other method or combination of methods (e.g., more features, tuning)\n",
     "* Future work:\n",
     "  * Interplay between subsequent messages and replies\n",
     "  * Adding \"lurker\" activity to response\n",
-    "  * Message author reputation"
+    "  * Message author's reputation (e.g., \"likes\", followers)"
    ]
   }
  ],
