--- a/final project/Class Project.ipynb
+++ b/final project/Class Project.ipynb
@@ -456,7 +456,7 @@
     "* The model with the hand-engineered features is chosen for further exploration due to its relatively high interpretability\n",
     "  * Once selecting a model for further analysis, the model was evaluated by feeding all 256 combinations of features\n",
     "  * The model with the following features--'has_attach', 'has_qm', 'has_key_word', 'author_age', and 'has_at_mention'--achieved .628 class prediction accuracy and .654 AUC, rather insignificant improvement over the model using all features (.611 and .647, respectively)\n",
-    "* Training models on class-balanced data did more to improve performance than did any tuning or feature engineering on data with class imbalance\n",
+    "* Training models on class-balanced data did more to improve performance than did any tuning (e.g., regularization, stratifed cross validation) or feature engineering on data with class imbalance\n",
     "\n",
     "    \n",
     "###6.2 Future Work\n",
