--- a/final project/Class Project.ipynb
+++ b/final project/Class Project.ipynb
@@ -461,7 +461,7 @@
     "    \n",
     "###6.2 Future Work\n",
     "\n",
-    "* Understanding the role of replies to originl posts that garner greater response could improve problem definition and solution\n",
+    "* Understanding the role of replies to original posts that garner greater response could improve problem definition and solution\n",
     "* Obtaining message poster reputation, which was not available, can potentially improve the predictive power of model alternatives\n",
     "* Only about 4% of 18,000 users are \"engaged\" (i.e., post content, comment on other users' content, click on the like button) at any given reporting period.  Approximately, 30% of all users are considered \"lurkers.\"  Lurker data is not available but is obtainable, provided I get approval from the CIO.  Using both active user and lurker data is critical to measuring the true engagement level of users  "
    ]
